added functional links and buttons, polished off border scaffolding

--- a/improvedStyles.css
+++ b/improvedStyles.css
@@ -22,18 +22,18 @@ body {
 
 .aboutMe {
     display: flex;
-    border: solid 1px #ffffff;
+    /*border: solid 1px #ffffff;*/
     justify-content: center;
     color: #ffffff;
     background-color: transparent;
     height: 190vh;
-    padding: 10vh 8vw;
+    padding: 10vh 8vw 0;
     margin-top: -100vh;
 }
 
 .animContainer {
     height: 100vh;
-    border: solid 1px #ff0000;
+    /*/border: solid 1px #ff0000;*/
     position: sticky;
     top: 0;
     display: flex;
@@ -63,7 +63,7 @@ body {
 }
 
 .meContainer {
-    border: solid 1px #000000;
+    /*border: solid 1px #000000;*/
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -74,20 +74,64 @@ body {
 
 .pfp {
     text-align: center;
-    border: solid 1px #ffffff;
+    /*border: solid 1px #ffffff;*/
     width: 50vh;
     height: 50vh;
 }
 
 .headerText {
-    border: solid 1px #ffffff;
+    /*border: solid 1px #ffffff;*/
     font-size: 8vh;
 }
 
 .subText {
-    border: solid 1px #ffffff;
+    /*border: solid 1px #ffffff;*/
     font-size: 4vh;
     color: #808080;
+}
+
+.introContainer {
+    margin-top: 162vh;
+    /*border: solid 1px #000000;*/
+    color: #ffffff;
+    padding: 1px 1px;
+    display: flex;
+    flex-direction: column;
+    z-index: 1000;
+}
+
+.introButtons {
+    display: flex;
+    /*border: solid 1px #ffffff;*/
+}
+
+.dropright {
+}
+
+    .dropright:hover .dropdown-menu{
+        display: contents;
+    }
+
+.btnIntro {
+    display: flex;
+    align-items: center;
+    border-radius: 12px;
+    height: 8vh;
+    background: #DD4D48;
+    padding: 0 2vh;
+    border: none;
+    color: #ffffff;
+    margin-bottom: 1vh;
+}
+
+    .btnIntro:hover {
+        background: #56734F;
+        color: #245F4D;
+        text-decoration: none;
+    }
+
+.introInfo {
+    /*border: solid 1px #ffffff;*/
 }
 
 .headerContainer {
@@ -105,7 +149,7 @@ body {
 }
 
 .header {
-    border: solid 1px #000000;
+    /*border: solid 1px #000000;*/
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -156,37 +200,36 @@ body {
     background-attachment: fixed;
     background-position: right;
     height: 100vh;
-    border: solid 1px #ffffff;
+    flex-direction: column;
+    /*border: solid 1px #ffffff;*/
     align-items: center;
     justify-content: center;
     display: flex;
     padding: 3vh 8vw;
 }
 
-.introContainer {
-    /*border: solid 1px #000000;*/
-    color: #ffffff;
-    padding: 1px 1px;
+.resumeContainer {
     display: flex;
-}
-
-.introInfo {
-    border: 1px solid #ffffff;
+    margin: 1px 1px;
+    /*border: 1px solid #000000;*/
+    justify-content: center;
+    color: #ffffff;
+    z-index: 1000;
 }
 
 .carouselSect {
     /*background: linear-gradient(to bottom, #245F4D, #56734F);*/
     box-shadow: 0 -8px 8px #13191A;
     height: 150vh;
-    border: solid 1px #ffffff;
-    align-items: center;
+    /*border: solid 1px #ffffff;*/
     justify-content: center;
     display: flex;
     padding: 3vh 8vw;
 }
 
 .projectContainer {
-    border: solid 1px #000000;
+    margin-top: 10vh;
+    /*border: solid 1px #000000;*/
     color: #ffffff;
     padding: 1px 1px;
     display: flex;
@@ -201,4 +244,11 @@ body {
     width: 70vh;
     height: 45vh;
     z-index: 1000;
+}
+
+.credits {
+    background: transparent;
+    color: #ffffff;
+    font-size: 2vh;
+    padding: 1vh 8vw;
 }
