--- a/improvedStyles.css
+++ b/improvedStyles.css
@@ -227,6 +227,7 @@ body {
     border: none;
     border-radius: 12px;
     color: black;
+    font: 24px verdana;
 }
 
     .btnCarou:hover {
@@ -289,6 +290,14 @@ body {
     justify-content: end;
 }
 
+.RTprojCaption {
+    max-width: 15vw;
+    height: inherit;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+}
+
 .projHeader {
     padding-top: 5vh;
     padding-left: 2vw;
@@ -311,6 +320,14 @@ body {
 .project {
     border: 1px solid #ffffff;
     width: 80vh;
+    height: 45vh;
+    margin-top: 5vh;
+    margin-right: 2vw;
+}
+
+.RTproject {
+    /*border: 1px solid #ffffff;*/
+    width: 90vh;
     height: 45vh;
     margin-top: 5vh;
     margin-right: 2vw;
